--- a/style.css
+++ b/style.css
@@ -1,99 +1,105 @@
-body h2{
-    color: #996633;
-}
-.header h1{
-    display: flex;
+body {
+    background-color: rgb(100, 94, 94);
     justify-content: center;
-
 }
-.header img{
-    width: 40%;
-    margin-left: 30%;
-    border-radius: 10px;
+header{
+    text-align: center;
+    margin: auto;
     
 }
+.head1{
+    display: inline-block;
+}
+.head2{
+    display: inline-block;
+}
 
-.coffeemenu h2{
-    display: flex;
-    justify-content: center;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+main {
+    width: 70%;
+    background-color: white;
+    margin: auto;
+
 }
-.teamenu h2{
-    display: flex;
-    justify-content: center;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+
+header img {
+    width: 3%;
 }
-table{
-    width: 80%;
-    margin-left: 10%;
+table {
+    width: 90%;
+    margin: auto;
+    text-align: left;
+    border-collapse: collapse;
 }
-table tr{
-    padding: 5px;
+main h1{
     text-align: center;
-}
-table tr:nth-child(odd){
-    background-color: rgb(179, 177, 177);
-
+    padding: 20px;
+    color: #996633;
 }
 .splitems{
     display: flex;
-    justify-content: center;
-    
-
+    margin: 2%;
 }
 .spl{
-    width: 23vw;
-    margin: 2rem;
-
-   
-    
-}
-.spl p{
-    justify-content: center;
-}
-.splhead{
-    display: flex;
-    justify-content: center;
-    margin-top: 2rem;
-}
-.spl p{
+    flex:1;
+    margin: 20px;
     text-align: center;
-    margin-top: 1rem;
+}
+.spl p {
+    margin-top: 20px;
 }
 .aboutus{
-    width: 80%;
-    margin-left: 10%;
-    text-align: justify;
-}
-.aboutus h2{
-    text-align: center;
-    margin: 1rem 0 2rem 0;
+    margin: 20px;
 }
 .talktous{
     text-align: center;
-    
-}
-.talktous p{
-    margin-bottom: 1rem;
-}
-.talktous a{
-    padding: 12px;
-    text-decoration: none;
-    background-color: rgb(104, 108, 104);
-    
-}
-hr{
-    margin: 1rem 0 1rem 0;
-    width: 60%;
-    margin-left: 20%;
 }
 footer{
-    height: 2rem;
-    background-color: black;
-    color: white;
     text-align: center;
-    margin-top: 2rem;
+    margin: 20px;
+}
+.logo img{
+    width:100%;
+}
+table th {
+    background-color: rgb(80, 78, 78);
     padding: 5px;
+   
+    
+}
+table tr:nth-child(odd) {
+    background-color: rgb(189, 176, 176);
+
+}
+table tr td:nth-child(1){
+    padding-left: 20px;
+}
+.talktous p {
+    margin-bottom: 30px;
+}
+.talktous a{
+    margin-bottom: 30px;
+    padding: 12px;
+    background-color: rgb(171, 212, 171);
+    text-decoration: none;
+}
+hr {
+    width: 60%;
+    margin: auto;
+}
+@media (min-width: 350px) and (max-width: 760px){
+    main{
+        width: 80%;
+        margin: auto;
+    }
+    .splitems{
+        display: flex;
+        flex-direction: column;
+    }
+    .spl{
+        width: 100%;
+        
+    }
+    header {
+        padding: 50px;
+    }
 }
