--- a/style.css
+++ b/style.css
@@ -98,6 +98,9 @@ footer{
     text-align: center;
     padding: 20px 0;
 }
+table tr td,th{
+    padding: 8px 4px;
+}
 
 @media (max-width: 575.98px){
 
@@ -142,6 +145,7 @@ footer{
         width: 60%;
        
     }
+
     
     
 
